--- a/Data analysis recipes - Fitting a model to data.ipynb
+++ b/Data analysis recipes - Fitting a model to data.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85f10a46",
+   "id": "80455e41",
    "metadata": {},
    "source": [
     "###Table 1 (from Page 6)\n",
@@ -135,7 +135,9 @@
    "source": [
     "**Exercise 1: Analytical linear least squares without outliers**\n",
     "\n",
-    "Using the standard linear algebra method, fit the straight line $y = mx + b$ to the x, y, and  $\\sigma_y$ values for data points 5 through 20 in Table 1 on paper page 6. That is, ignore the first four data points, and also ignore the columns for $\\sigma_x$ and $\\rho_xy$. Make a plot showing the points, their uncertainties, and the best-fit line. Plot should end up looking like Figure 1. What is the standard uncertainty variance $\\sigma_m^2$ on the slope of the line?"
+    "Using the standard linear algebra method, fit the straight line $y = mx + b$ to the x, y, and  $\\sigma_y$ values for data points 5 through 20 in Table 1 on paper page 6. That is, ignore the first four data points, and also ignore the columns for $\\sigma_x$ and $\\rho_xy$. Make a plot showing the points, their uncertainties, and the best-fit line. Plot should end up looking like Figure 1. What is the standard uncertainty variance $\\sigma_m^2$ on the slope of the line?\n",
+    "\n",
+    "<img src=\"Images/Figure1.png\">"
    ]
   },
   {
@@ -192,7 +194,9 @@
    "source": [
     "**Exercise 2: Analytical linear least squares with outliers**\n",
     "\n",
-    "Repeat Exercise 1 but for all the data points in Table 1 on page 6. Your plot should end up looking like Figure 2. What is the standard uncertainty variance $\\sigma_m^2$ on the slope of the line? Is there anything you don’t like about the result? Is there anything different about the new points you have included beyond those used in Exercise 1?"
+    "Repeat Exercise 1 but for all the data points in Table 1 on page 6. Your plot should end up looking like Figure 2. What is the standard uncertainty variance $\\sigma_m^2$ on the slope of the line? Is there anything you don’t like about the result? Is there anything different about the new points you have included beyond those used in Exercise 1?\n",
+    "\n",
+    "<img src=\"Images/Figure2.png\">"
    ]
   },
   {
@@ -249,7 +253,9 @@
     "\n",
     "Generalize the method of this Section to fit a general quadratic (second order) relationship. Add another column to matrix A containing the values $x_i^2$ , and another element to vector X (call it q). Then re-do Exercise 1 but fitting for and plotting the best quadratic relationship\n",
     "$$g(x) = q x^2 + mx + b $$\n",
-    "Your plot should end up looking like Figure 3."
+    "Your plot should end up looking like Figure 3.\n",
+    "\n",
+    "<img src=\"Images/Figure3.png\">"
    ]
   },
   {
