minor (print) updates

--- a/Data analysis recipes - Fitting a model to data.ipynb
+++ b/Data analysis recipes - Fitting a model to data.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "db64349e",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80455e41",
+   "id": "a1360ba4",
    "metadata": {},
    "source": [
     "###Table 1 (from Page 6)\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "44607e82",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "3b6cdef3",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "04e6fd38",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y = b + m x = (2.239921 +/- 0.107780) x + (34.047728 +/- 18.246167)\n"
+      "y = m x + b = (2.239921 +/- 0.107780) x + (34.047728 +/- 18.246167)\n"
      ]
     },
     {
@@ -173,17 +173,16 @@
     "\n",
     "# This will return matrix product of two array => (A1.T @ inv(C1))\n",
     "\n",
-    "X1 = inv(A1.T @ inv(C1) @ A1) @ (A1.T @ inv(C1) @ Y1)\n",
-    "S1 = inv(A1.T @ inv(C1) @ A1)\n",
-    "print(\"y = b + m x = (%f +/- %f) x + (%f +/- %f)\" % (X1[1], np.sqrt(S1[1][1]), \n",
-    "                                                 X1[0], np.sqrt(S1[0][0])))\n",
+    "X1_1 = inv(A1.T @ inv(C1) @ A1) @ (A1.T @ inv(C1) @ Y1)\n",
+    "X1_2 = inv(A1.T @ inv(C1) @ A1)\n",
+    "print(\"y = m x + b = (%f +/- %f) x + (%f +/- %f)\" % (X1_1[1], np.sqrt(X1_2[1][1]), X1_1[0], np.sqrt(X1_2[0][0])))\n",
     "\n",
     "plt.errorbar(X[4:], Y[4:], yerr = sigma_Y[4:], marker = \".\", linestyle = \"\");\n",
     "plt.xlabel(\"$x$\"); plt.ylabel(\"$y$\");\n",
     "plt.xlim(0, 300);  plt.ylim(0, 700);\n",
     "x = np.linspace(0, 300)\n",
     "A = np.column_stack([np.ones_like(x), x])\n",
-    "y = A @ X1\n",
+    "y = A @ X1_1\n",
     "plt.plot(x, y);"
    ]
   },
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "cb170c16",
    "metadata": {},
    "outputs": [
@@ -209,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y = b + m x = (1.076748 +/- 0.077407) x + (213.273492 +/- 14.394033)\n"
+      "y = m x + b = (1.076748 +/- 0.077407) x + (213.273492 +/- 14.394033)\n"
      ]
     },
     {
@@ -230,17 +229,16 @@
     "C2 = np.diag(sigma_Y**2)\n",
     "\n",
     "\n",
-    "X2 = inv(A2.T @ inv(C2) @ A2) @ (A2.T @ inv(C2) @ Y)\n",
-    "S2 = inv(A2.T @ inv(C2) @ A2)\n",
-    "print(\"y = b + m x = (%f +/- %f) x + (%f +/- %f)\" % (X2[1], np.sqrt(S2[1][1]), \n",
-    "                                                 X2[0], np.sqrt(S2[0][0])))\n",
+    "X2_1 = inv(A2.T @ inv(C2) @ A2) @ (A2.T @ inv(C2) @ Y)\n",
+    "X2_2 = inv(A2.T @ inv(C2) @ A2)\n",
+    "print(\"y = m x + b = (%f +/- %f) x + (%f +/- %f)\" % (X2_1[1], np.sqrt(X2_2[1][1]), X2_1[0], np.sqrt(X2_2[0][0])))\n",
     "\n",
     "plt.errorbar(X, Y, yerr = sigma_Y, marker = \".\", linestyle = \"\");\n",
     "plt.xlabel(\"$x$\"); plt.ylabel(\"$y$\");\n",
     "plt.xlim(0, 300);  plt.ylim(0, 700);\n",
     "x = np.linspace(0, 300)\n",
     "A = np.column_stack([np.ones_like(x), x])\n",
-    "y = A @ X2\n",
+    "y = A @ X2_1\n",
     "plt.plot(x, y);"
    ]
   },
@@ -260,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "3f010b8f",
    "metadata": {},
    "outputs": [
@@ -289,18 +287,18 @@
     "A3 = np.column_stack([np.ones_like(X[4:]), X[4:], X[4:]**2])\n",
     "C3 = np.diag(sigma_Y[4:]**2)\n",
     "\n",
-    "X3 = inv(A3.T @ inv(C3) @ A3) @ (A3.T @ inv(C3) @ Y3)\n",
-    "S3 = inv(A3.T @ inv(C3) @ A3)\n",
-    "print(\"q x**2 + m x + b = (%f +/- %f) x**2 + (%f +/- %f) x + (%f +/- %f)\" % (X3[2], np.sqrt(S3[2][2]),\n",
-    "                                                                             X3[1], np.sqrt(S3[1][1]),\n",
-    "                                                                             X3[0], np.sqrt(S3[0][0])))\n",
+    "X3_1 = inv(A3.T @ inv(C3) @ A3) @ (A3.T @ inv(C3) @ Y3)\n",
+    "X3_2 = inv(A3.T @ inv(C3) @ A3)\n",
+    "print(\"q x**2 + m x + b = (%f +/- %f) x**2 + (%f +/- %f) x + (%f +/- %f)\" % (X3_1[2], np.sqrt(X3_2[2][2]),\n",
+    "                                                                             X3_1[1], np.sqrt(X3_2[1][1]),\n",
+    "                                                                             X3_1[0], np.sqrt(X3_2[0][0])))\n",
     "\n",
     "plt.errorbar(X[4:], Y[4:], yerr = sigma_Y[4:], marker = \".\", linestyle = \"\");\n",
     "plt.xlabel(\"$x$\"); plt.ylabel(\"$y$\");\n",
     "plt.xlim(0, 300);  plt.ylim(0, 700);\n",
     "x = np.linspace(0, 300)\n",
     "A = np.column_stack([np.ones_like(x), x, x**2])\n",
-    "y = A @ X3\n",
+    "y = A @ X3_1\n",
     "plt.plot(x, y);"
    ]
   },
