--- a/Data analysis recipes - Fitting a model to data.ipynb
+++ b/Data analysis recipes - Fitting a model to data.ipynb
@@ -26,6 +26,19 @@
     "it minimizes an objective function $\\chi^2$, (“chi-squared”) which is the total squared error, scaled by the uncertainties.\n",
     "\n",
     "$$ \\chi^2 = \\sum_{i=1}^N \\frac{[y_i - f(x_i)]^2}{\\sigma_{y_i}^2} = [Y - AX]^T C^{-1} [Y - AX] $$\n",
+    "\n",
+    "we can take a derivative with respect to $\\mathbf{X}$ as\n",
+    "\n",
+    "$$ 0 = \\frac{d}{d\\mathbf{X}} \\chi^2 = -\\mathbf{A}^T \\mathbf{C}^{-1} [\\mathbf{Y} - \\mathbf{A} \\mathbf{X}] -  [\\mathbf{Y} - \\mathbf{A} \\mathbf{X}]^T \\mathbf{C}^{-1} \\mathbf{A} $$\n",
+    "\n",
+    "or\n",
+    "\n",
+    "$$ \\mathbf{A}^T \\mathbf{C}^{-1} \\mathbf{A} \\mathbf{X} = \\mathbf{A}^T \\mathbf{C}^{-1} \\mathbf{Y} $$\n",
+    "\n",
+    "which is satisfied for\n",
+    "\n",
+    "$$ \\mathbf{X} = [\\mathbf{A}^T \\mathbf{C}^{-1} \\mathbf{A}]^{-1} [\\mathbf{A}^T \\mathbf{C}^{-1} \\mathbf{Y}] $$\n",
+    "\n",
     "This, of course, is only one possible meaning of the phrase “best fit”\n",
     "This is actually the simplest thing to write that is linear, obeys matrix multiplication rules, and has the right relative sensitivity to data of different statistical significance.\n",
     "\n",
@@ -57,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1360ba4",
+   "id": "00223e8b",
    "metadata": {},
    "source": [
     "###Table 1 (from Page 6)\n",
@@ -83,7 +96,14 @@
     "| 17 | 186 | 423 | 42 | 9 | 0.90 |\n",
     "| 18 | 125 | 334 | 26 | 8 | 0.40 |\n",
     "| 19 | 218 | 533 | 16 | 6 | -0.78 |\n",
-    "| 20 | 146 | 344 | 22 | 5 | -0.56 |"
+    "| 20 | 146 | 344 | 22 | 5 | -0.56 |\n",
+    "\n",
+    "\n",
+    "Note. - The full Uncertainty covariance matrix for each data point is given by\n",
+    "$$\\begin{bmatrix}\n",
+    "    \\sigma_x^2  & \\rho_{xy}\\sigma_x\\sigma_y \\\\\n",
+    "    \\rho_{xy}\\sigma_x\\sigma_y & \\sigma_y^2\n",
+    "\\end{bmatrix} $$"
    ]
   },
   {
@@ -309,6 +329,51 @@
    "source": [
     "## The objective function\n",
     "\n",
+    "In principle, there are many choices for objective function - justify- in the sense that it leads to interpretable probabilistic inference, is to make a generative model for the data.\n",
+    "\n",
+    "The frequency distribution for $y_i$ is:\n",
+    "$$ p(y_i | x_i \\sigma_{y_i}, m, b) = \\frac{1}{\\sqrt{2\\pi\\sigma_{y_i}^2}} \\exp\\left( -\\frac{[y_i - m x_i - b]^2}{2\\sigma_{y_i}^2} \\right). $$\n",
+    "where this gives the expected frequency of getting a value in the infinitesimal range [y_i, y_i + dy] per unit dy.\n",
+    "The generative model provides us with a natural, justified, scalar objective. In our generative model the data points are independently drawn (implicitly), so the likelihood $\\mathcal{L}$ is the product of conditional probabilities.\n",
+    "\n",
+    "We can use this to calculate the likelihood\n",
+    "$$ \\mathcal{L} = \\prod_{i=1}^N p(y_i | x_i \\sigma_{y_i}, m, b), $$\n",
+    "\n",
+    "and log likelihood\n",
+    "$$ \\ln \\mathcal{L} = K - \\sum_{i=1}^N \\frac{[y_i - m x_i - b]^2}{2\\sigma_{yi}^2} = K - \\frac{1}{2} \\chi^2 $$\n",
+    "\n",
+    "where K is some constant and shows that likelihood maximization is iden- tical to $\\chi^2$ minimization.\n",
+    "\n",
+    "**The Bayesian generalization**\n",
+    "The Bayesian generalization of this is\n",
+    "\n",
+    "$$ p(m, b | \\{ y_i \\}_{i=1}^N, \\textit{I}) = \\frac{p(\\{ y_i \\}_{i=1}^N | m, b, \\textit{I}) p(m, b | \\textit{I})}{p(\\{ y_i \\}_{i=1}^N | \\textit{I})} $$\n",
+    "\n",
+    "where \n",
+    "m and b are the model parameters\n",
+    "$\\{ y_i \\}_{i=1}^N$ is a short-hand for all the data $y_i$\n",
+    "$\\textit{I}$ is a short-hand for all the prior knowledge of the $x_i$ and the $\\sigma_{y_i}$ and everything else.\n",
+    "$p(m, b | \\{ y_i \\}_{i=1}^N, \\textit{I})$ is the posterior proba- bility distribution for the parameters given the data.\n",
+    "$p(\\{ y_i \\}_{i=1}^N | m, b, \\textit{I})$ is the prior knowledge (also likelihood $\\mathcal{L}$ which is a frequency distribution for the data)\n",
+    "$p(m, b | \\textit{I})$ is the prior probability distribution for the parameters that represents all knowledge except the data $\\{ y_i \\}_{i=1}^N$\n",
+    "The denominator can be normalization constant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b82e85b",
+   "metadata": {},
+   "source": [
+    "**Exercise 4: Maximum likelihood for single value with normal measurement noise**\n",
+    "\n",
+    "Imagine a set of N measurements $t_i$, with uncertainty variances $\\sigma_{t_i}^2$, all of the same (unknown) quantity T. Assuming the generative model that each $t_i$ differs from T by a Gaussian-distributed offset, taken from a Gaussian with zero mean and variance $\\sigma_{t_i}^2$, write down an expression for the log likelihood $\\ln \\mathcal{L}$ for the data given the model parameter T. Take a derivative and show that the maximum likelihood value for T is the usual weighted mean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6a5e6ec",
+   "metadata": {},
+   "source": [
     "The frequency distribution for $t_i$ is:\n",
     "$$ p(t_i | \\sigma_{ti}, T) = \\frac{1}{\\sqrt{2\\pi\\sigma_{ti}^2}} \\exp\\left( -\\frac{[t_i - T]^2}{2\\sigma_{ti}^2} \\right). $$\n",
     "We can use this to calculate the likelihood\n",
@@ -326,18 +391,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b82e85b",
+   "id": "286dddb7",
    "metadata": {},
    "source": [
-    "**Exercise 4: Maximum likelihood for single value with normal measurement noise**\n",
+    "**Exercise 5: Derivation of analytical expression**\n",
     "\n",
-    "Imagine a set of N measurements $t_i$, with uncertainty variances $\\sigma_{t_i}^2$, all of the same (unknown) quantity T. Assuming the generative model that each $t_i$ differs from T by a Gaussian-distributed offset, taken from a Gaussian with zero mean and variance $\\sigma_{t_i}^2$, write down an expression for the log likelihood $\\ln \\mathcal{L}$ for the data given the model parameter T. Take a derivative and show that the maximum likelihood value for T is the usual weighted mean."
+    "Take the matrix formulation for $\\chi^2$ given in equation $ \\chi^2 = \\sum_{i=1}^N \\frac{[y_i - f(x_i)]^2}{\\sigma_{y_i}^2} = [Y - AX]^T C^{-1} [Y - AX] $ and take derivatives to show that the minimum is at the matrix location given in equation $\\begin{bmatrix}\n",
+    "    b  \\\\\n",
+    "    m\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "X = [A^T C^{-1} A]^{-1} [A^T C^{-1} Y] $."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b7111b1",
+   "metadata": {},
+   "source": [
+    "**Solution as shown above:**\n",
+    "\n",
+    "Starting from the definition of $\\chi^2$ as\n",
+    "$$ \\chi^2 = [\\mathbf{Y} - \\mathbf{A} \\mathbf{X}]^T \\mathbf{C}^{-1} [\\mathbf{Y} - \\mathbf{A} \\mathbf{X}] $$\n",
+    "we can take a derivative with respect to $\\mathbf{X}$ as\n",
+    "$$ 0 = \\frac{d}{d\\mathbf{X}} \\chi^2 = -\\mathbf{A}^T \\mathbf{C}^{-1} [\\mathbf{Y} - \\mathbf{A} \\mathbf{X}] -  [\\mathbf{Y} - \\mathbf{A} \\mathbf{X}]^T \\mathbf{C}^{-1} \\mathbf{A} $$\n",
+    "or\n",
+    "$$ \\mathbf{A}^T \\mathbf{C}^{-1} \\mathbf{A} \\mathbf{X} = \\mathbf{A}^T \\mathbf{C}^{-1} \\mathbf{Y} $$\n",
+    "which is satisfied for\n",
+    "$$ \\mathbf{X} = [\\mathbf{A}^T \\mathbf{C}^{-1} \\mathbf{A}]^{-1} [\\mathbf{A}^T \\mathbf{C}^{-1} \\mathbf{Y}] $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e356e7a",
+   "metadata": {},
+   "source": [
+    "## Pruning outliers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3848fc9",
+   "id": "9bd893ea",
    "metadata": {},
    "outputs": [],
    "source": []
